attached_assets/Pasted-Compiling-securechain-v1-0-0-home-runner-workspace-SecureChain-warning-unused-import-commands-1751920253547_1751920253549.txt
Compiling securechain v1.0.0 (/home/runner/workspace/SecureChain)
warning: unused import: `commands::*`
 --> src/cli/mod.rs:8:9
  |
8 | pub use commands::*;
  |         ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::collections::HashMap`
 --> src/core/ai_assist.rs:9:5
  |
9 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `anyhow`
 --> src/core/fuzz_engine.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `std::collections::HashMap`
 --> src/core/fuzz_engine.rs:8:5
  |
8 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `analyzer::*`
  --> src/core/mod.rs:12:9
   |
12 | pub use analyzer::*;
   |         ^^^^^^^^^^^

warning: unused import: `fetcher::*`
  --> src/core/mod.rs:13:9
   |
13 | pub use fetcher::*;
   |         ^^^^^^^^^^

warning: unused import: `parser::*`
  --> src/core/mod.rs:14:9
   |
14 | pub use parser::*;
   |         ^^^^^^^^^

warning: unused import: `ai_assist::*`
  --> src/core/mod.rs:15:9
   |
15 | pub use ai_assist::*;
   |         ^^^^^^^^^^^^

warning: unused import: `fuzz_engine::*`
  --> src/core/mod.rs:16:9
   |
16 | pub use fuzz_engine::*;
   |         ^^^^^^^^^^^^^^

warning: unused import: `anyhow`
 --> src/plugins/evm.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `anyhow`
 --> src/plugins/move_lang.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `anyhow`
 --> src/plugins/cairo.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `anyhow`
 --> src/plugins/ink.rs:6:14
  |
6 | use anyhow::{anyhow, Result};
  |              ^^^^^^

warning: unused import: `generator::*`
 --> src/report/mod.rs:9:9
  |
9 | pub use generator::*;
  |         ^^^^^^^^^^^^

warning: unused import: `vulnerability::*`
  --> src/report/mod.rs:10:9
   |
10 | pub use vulnerability::*;
   |         ^^^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
 --> src/utils/error.rs:7:5
  |
7 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `config::*`
  --> src/utils/mod.rs:10:9
   |
10 | pub use config::*;
   |         ^^^^^^^^^

warning: unused import: `error::*`
  --> src/utils/mod.rs:11:9
   |
11 | pub use error::*;
   |         ^^^^^^^^

error[E0308]: mismatched types
   --> src/cli/commands.rs:249:71
    |
249 | ...= report_gen.generate_markdown_report(&results)?;
    |                 ------------------------ ^^^^^^^^ expected `&ComprehensiveReport`, found `&AnalysisResults`
    |                 |
    |                 arguments to this method are incorrect
    |
    = note: expected reference `&ComprehensiveReport`
               found reference `&AnalysisResults`
note: method defined here
   --> src/report/generator.rs:706:12
    |
706 | ...fn generate_markdown_report(&self, report: &ComprehensiveReport) -> ...
    |       ^^^^^^^^^^^^^^^^^^^^^^^^        ----------------------------

error[E0277]: the trait bound `&std::string::String: Borrow<&str>` is not satisfied
   --> src/report/generator.rs:252:50
    |
252 |             if let Some(vulns) = by_severity.get(severity) {
    |                                              --- ^^^^^^^^ the trait `Borrow<&str>` is not implemented for `&std::string::String`
    |                                              |
    |                                              required by a bound introduced by this call
    |
    = help: the trait `Borrow<str>` is implemented for `std::string::String`
note: required by a bound in `HashMap::<K, V, S>::get`
   --> /nix/store/y5k023q95ndaiiw8f5x0krkgdvq54h6c-rust-mixed/lib/rustlib/src/rust/library/std/src/collections/hash/map.rs:899:12
    |
897 |     pub fn get<Q: ?Sized>(&self, k: &Q) -> Option<&V>
    |            --- required by a bound in this associated function
898 |     where
899 |         K: Borrow<Q>,
    |            ^^^^^^^^^ required by this bound in `HashMap::<K, V, S>::get`

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
warning: `securechain` (bin "securechain") generated 18 warnings
error: could not compile `securechain` (bin "securechain") due to 2 previous errors; 18 warnings emitted